--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+body::-webkit-scrollbar {
+    width: 9px;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.685);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: rgba(126, 126, 126, 0.421);
+    outline: 1px solid rgb(51, 53, 54);
+  }
 
 body,
 html {
